Fix gradle